<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:background="@color/main_theme"
    android:padding="20dp">
    <ImageView
        android:id="@+id/register_login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/toyger_cat"
        android:layout_marginTop="25dp"
        android:transitionName="@string/logo_image_transition_name"
        android:contentDescription="@string/login_image_description" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/register_weclome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bluestone"
            android:transitionName="@string/logo_text_transition_name"
            android:text="@string/register_hello"
            android:textColor="@color/start_login_font"
            android:textSize="37sp"/>
        <TextView
            android:id="@+id/register_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/desc_text_transition_name"
            android:text="@string/signup_continue"
            android:textSize="18sp"
            android:fontFamily="@font/babycake"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username_edit"
                android:transitionName="@string/username_text_transition_name"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_nickname_edit"
                android:transitionName="@string/username_text_transition_name"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nikename"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password_edit"
                android:singleLine="true"
                android:transitionName="@string/password_text_transition_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_repassword_edit"
                android:transitionName="@string/password_text_transition_name"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password_repeat"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/register_btn"
            android:transitionName="@string/go_btn_transition_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_register"
            android:background="@drawable/bg_go_signin"
            android:textColor="#FFFF"/>
    </LinearLayout>
    <TextView
        android:id="@+id/goback_signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_forget_signup"
        android:textSize="13sp"
        android:text="@string/button_go_signin"
        android:transitionName="@string/register_text_transition_name"
        android:textColor="@color/start_login_font"/>


</LinearLayout>